# aws-copier

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.yaml  main.py  main_gui.py  pyproject.toml  pytest.ini  setup_windows.py  test_gui.py  upload_large.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-core-reliability/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VERIFICATION.md
.planning/phases/02-performance-polish/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-UAT.md
.planning/quick/20260426-b540-md5-thread-perf/: 20260426-b540-PLAN.md  20260426-b540-SUMMARY.md
.planning/quick/20260426-web-dashboard/: PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
aws_copier/: __init__.py
aws_copier/core/: __init__.py  batch_processor.py  file_listener.py  folder_watcher.py  ignore_rules.py  queue_manager.py  s3_manager.py
aws_copier/daemon/: __init__.py
aws_copier/models/: __init__.py  simple_config.py
aws_copier/ui/: __init__.py  simple_gui.py
aws_copier/utils/: __init__.py
aws_copier/web/: __init__.py  dashboard.py
tests/: __init__.py
tests/unit/: __init__.py  test_file_listener.py  test_folder_watcher.py  test_ignore_rules.py  test_main_lifecycle_wiring.py  test_queue_manager.py  test_s3_manager.py  test_s3_manager_comprehensive.py  test_s3_manager_perf.py  test_signal_handling.py  test_simple_config.py  test_upload_large.py
