[project]
name = "aws-copier"
version = "0.1.0"
description = "Cross-platform daemon for real-time folder synchronization to AWS S3 with file integrity verification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiobotocore>=2.24.1", # Truly async S3 operations
    "watchdog>=3.0.0", # File system monitoring
    "pyyaml>=6.0.2", # YAML configuration
    "python-dotenv>=1.1.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "moto[s3]>=4.0.0",
]
ui = [
    # tkinter is included with Python
]

[project.scripts]
aws-copier = "simple_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
lint.ignore = ["E501","E402","E731","E741","E712"]
extend-exclude = [
  "__pycache__",
  ".eggs",
  ".git",
  ".venv",
  "build",
  "dist",
  "notebooks",
  ".cache",
  "templates",
  "developement",
  "development"
]
line-length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=aws_copier",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=30",  # Lower threshold for now
    "-v"
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "moto[s3]>=4.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
